// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileMoon extracts stream via MediaFlow extractor 1`] = `
[
  {
    "format": "hls",
    "label": "FileMoon (MFP)",
    "meta": {
      "extractorId": "filemoon",
    },
    "ttl": 900000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8?api_password=test&h_referer=https%3A%2F%2Ffilemoon.sx%2Fe%2Fc5lhlypfasmm&d=https%3A%2F%2Fedge1-waw-sprintcdn.r66nv9ed.com%2Fhls2%2F05%2F07596%2Fc5lhlypfasmm_h%2Fmaster.m3u8%3Ft%3Dtest-token%26s%3D1777362639%26e%3D10800%26f%3D37984100%26srv%3D1070%26asn%3D45102%26sp%3D4000%26p%3D0",
  },
]
`;

exports[`FileMoon handles extraction failure gracefully 1`] = `
[
  {
    "error": [Error: Invalid JSON response from https://mediaflow.test.org/extractor/video?host=FileMoon&api_password=test&d=https%3A%2F%2Ffilemoon.sx%2Fe%2Fn7i8zodwjqr9&h_referer=https%3A%2F%2Ffilemoon.sx%2Fe%2Fn7i8zodwjqr9],
    "format": "unknown",
    "isExternal": true,
    "label": "FileMoon (MFP)",
    "meta": {
      "extractorId": "filemoon",
    },
    "ttl": 0,
    "url": "https://filemoon.sx/e/n7i8zodwjqr9",
  },
]
`;

exports[`FileMoon supports alternative domain 1`] = `
[
  {
    "format": "hls",
    "label": "FileMoon (MFP)",
    "meta": {
      "extractorId": "filemoon",
    },
    "ttl": 900000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8?api_password=test&h_referer=https%3A%2F%2Fz1ekv717.fun%2Fd%2Fwkhcbggdxf1d&d=https%3A%2F%2Fedge1-waw-sprintcdn.r66nv9ed.com%2Fhls2%2F05%2F07596%2Fwkhcbggdxf1d_h%2Fmaster.m3u8%3Ft%3Dtest-token2%26s%3D1777362639%26e%3D10800%26f%3D37984101%26srv%3D1070%26asn%3D45102%26sp%3D4000%26p%3D0",
  },
]
`;
